package solver;

option java_package = "bdv.bigcat.control";
option java_outer_classname = "SolverMessages";

message Start {
  required string uuid = 1;
  repeated uint64 min = 2 [packed=true];
  repeated uint64 max = 3 [packed=true];
  repeated uint64 containedIds = 4 [packed=true];
  repeated uint64 neighboringIds = 5 [packed=true];
  repeated uint64 completelyRemovedIds = 6 [packed=true];
  required uint64 id = 7;
}

message Annotation {
  required string uuid = 1;
  repeated uint64 min = 2 [packed=true];
  repeated uint64 max = 3 [packed=true];
  required uint64 id = 4;
  required bytes data = 5;
}

message Stop {
  required string uuid = 1; 
}

message Assignment {
  required uint64 fragmentId = 1;
  required uint64 segmentId = 2;
}

message Assignments {
  required string uuid = 1;
  required uint64 id = 2;
  repeated Assignments assignments = 3;
}

enum Type {
  START = 0;
  ANNOTATION = 1;
  STOP = 2;
  ASSIGNMENTS = 3;
}

message Wrapper {
  required Type type = 1;
  oneof msg {
    Start start = 2;
    Annotation annotation = 3;
    Stop stop = 4;
    Assignments assignments = 5;
  }
}